--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "api/server.js": {
-      "runtime": "vercel-node@2"
+      "runtime": "nodejs14.x"
     }
   },
   "routes": [
